framec_tests/language_specific/java/v3_mir/positive/forward_parent.frm
@target java

system S {
    machine:
        $A => $P {
            e() {
                => $^
            }
        }
        $P { }
}
