framec_tests/language_specific/java/v3_mir/negative/forward_trailing_tokens.frm
@target java

system S {
    machine:
        $A {
            e() {
                => $^ extra
            }
        }
}

